// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product Satellite config should apply an inventory configuration: filtered 1`] = `
{
  "cells": [
    {
      "title": "lorem ipsum",
    },
    {
      "title": "--",
    },
    {
      "title": <React.Fragment>
        t(curiosity-inventory.label, {"context":"category"})
         
        
      </React.Fragment>,
    },
    {
      "title": 200,
    },
    {
      "title": <DateFormat
        date="2022-01-01T00:00:00.000Z"
      />,
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header_display, {"context":"name"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header_number_of, {"context":"guests"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"category"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"Sockets"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_last, {"context":"seen"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "Sockets": {
      "title": "t(curiosity-inventory.header, {"context":"Sockets"})",
      "value": 200,
    },
    "display_name": {
      "title": "t(curiosity-inventory.header_display, {"context":"name"})",
      "value": "lorem ipsum",
    },
    "last_seen": {
      "title": "t(curiosity-inventory.header_last, {"context":"seen"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
  },
}
`;

exports[`Product Satellite config should apply an inventory configuration: filtered, NOT authorized 1`] = `
{
  "cells": [
    {
      "title": "lorem ipsum",
    },
    {
      "title": "--",
    },
    {
      "title": <React.Fragment>
        t(curiosity-inventory.label, {"context":"category"})
         
        
      </React.Fragment>,
    },
    {
      "title": 200,
    },
    {
      "title": <DateFormat
        date="2022-01-01T00:00:00.000Z"
      />,
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header_display, {"context":"name"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header_number_of, {"context":"guests"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"category"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"Sockets"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_last, {"context":"seen"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "Sockets": {
      "title": "t(curiosity-inventory.header, {"context":"Sockets"})",
      "value": 200,
    },
    "display_name": {
      "title": "t(curiosity-inventory.header_display, {"context":"name"})",
      "value": "lorem ipsum",
    },
    "instance_id": {
      "title": "t(curiosity-inventory.header_instance, {"context":"id"})",
      "value": "XXXX-XXXX-XXXXX-XXXXX",
    },
    "last_seen": {
      "title": "t(curiosity-inventory.header_last, {"context":"seen"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
  },
}
`;

exports[`Product Satellite config should apply an inventory configuration: filtered, authorized 1`] = `
{
  "cells": [
    {
      "title": <Button
        component="a"
        href="/insights/inventory/XXXX-XXXX-XXXXX-XXXXX/"
        isInline={true}
        variant="link"
      >
        lorem ipsum
      </Button>,
    },
    {
      "title": "--",
    },
    {
      "title": <React.Fragment>
        t(curiosity-inventory.label, {"context":"category"})
         
        
      </React.Fragment>,
    },
    {
      "title": 200,
    },
    {
      "title": <DateFormat
        date="2022-01-01T00:00:00.000Z"
      />,
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header_display, {"context":"name"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header_number_of, {"context":"guests"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"category"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"Sockets"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_last, {"context":"seen"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "Sockets": {
      "title": "t(curiosity-inventory.header, {"context":"Sockets"})",
      "value": 200,
    },
    "display_name": {
      "title": "t(curiosity-inventory.header_display, {"context":"name"})",
      "value": "lorem ipsum",
    },
    "instance_id": {
      "title": "t(curiosity-inventory.header_instance, {"context":"id"})",
      "value": "XXXX-XXXX-XXXXX-XXXXX",
    },
    "last_seen": {
      "title": "t(curiosity-inventory.header_last, {"context":"seen"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
  },
}
`;

exports[`Product Satellite config should apply an inventory configuration: filtered, fallback display 1`] = `
{
  "cells": [
    {
      "title": "lorem ipsum",
    },
    {
      "title": "--",
    },
    {
      "title": <React.Fragment>
        t(curiosity-inventory.label, {"context":"category"})
         
        <Label
          color="purple"
        >
          t(curiosity-inventory.label_cloud_provider, {"context":"dolor sit"})
        </Label>
      </React.Fragment>,
    },
    {
      "title": 200,
    },
    {
      "title": "",
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header_display, {"context":"name"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header_number_of, {"context":"guests"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"category"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"Sockets"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_last, {"context":"seen"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "Sockets": {
      "title": "t(curiosity-inventory.header, {"context":"Sockets"})",
      "value": 200,
    },
    "cloud_provider": {
      "title": "t(curiosity-inventory.header_cloud, {"context":"provider"})",
      "value": "dolor sit",
    },
    "display_name": {
      "title": "t(curiosity-inventory.header_display, {"context":"name"})",
      "value": "lorem ipsum",
    },
    "instance_id": {
      "title": "t(curiosity-inventory.header_instance, {"context":"id"})",
      "value": null,
    },
    "last_seen": {
      "title": "t(curiosity-inventory.header_last, {"context":"seen"})",
      "value": null,
    },
  },
}
`;

exports[`Product Satellite config should apply an inventory configuration: filtered, infinite 1`] = `
{
  "cells": [
    {
      "title": "lorem ipsum",
    },
    {
      "title": "--",
    },
    {
      "title": <React.Fragment>
        t(curiosity-inventory.label, {"context":"category"})
         
        
      </React.Fragment>,
    },
    {
      "title": 200,
    },
    {
      "title": <DateFormat
        date="2022-01-01T00:00:00.000Z"
      />,
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header_display, {"context":"name"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header_number_of, {"context":"guests"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"category"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"Sockets"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_last, {"context":"seen"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "Sockets": {
      "title": "t(curiosity-inventory.header, {"context":"Sockets"})",
      "value": 200,
    },
    "display_name": {
      "title": "t(curiosity-inventory.header_display, {"context":"name"})",
      "value": "lorem ipsum",
    },
    "has_infinite_quantity": {
      "title": "t(curiosity-inventory.header_has_infinite, {"context":"quantity"})",
      "value": false,
    },
    "last_seen": {
      "title": "t(curiosity-inventory.header_last, {"context":"seen"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
  },
}
`;

exports[`Product Satellite config should apply graph configuration: filters 1`] = `
{
  "filtersSettings": [
    {
      "settings": {
        "actions": [
          {
            "id": "granularity",
            "position": "right",
          },
        ],
        "color": "#06c",
        "fill": "#8bc1f7",
        "groupMetric": [
          "Sockets",
        ],
        "isDisabledLegendClick": true,
        "isMetricDisplay": false,
        "isMultiMetric": true,
        "isStandalone": undefined,
        "metric": undefined,
        "metrics": [
          {
            "chartType": "area",
            "color": "#06c",
            "fill": "#8bc1f7",
            "id": "Sockets_physical",
            "isCapacity": false,
            "isStacked": true,
            "isThreshold": false,
            "isToolbarFilter": true,
            "metric": "Sockets",
            "query": {
              "category": "physical",
            },
            "stroke": "#06c",
            "strokeWidth": 2,
          },
          {
            "chartType": "area",
            "color": "#009596",
            "fill": "#a2d9d9",
            "id": "Sockets_virtual",
            "isCapacity": false,
            "isStacked": true,
            "isThreshold": false,
            "isToolbarFilter": true,
            "metric": "Sockets",
            "query": {
              "category": "virtual",
            },
            "stroke": "#009596",
            "strokeWidth": 2,
          },
          {
            "chartType": "area",
            "color": "#5752d1",
            "fill": "#b2b0ea",
            "id": "Sockets_cloud",
            "isCapacity": false,
            "isStacked": true,
            "isThreshold": false,
            "isToolbarFilter": true,
            "metric": "Sockets",
            "query": {
              "category": "cloud",
            },
            "stroke": "#5752d1",
            "strokeWidth": 2,
          },
        ],
        "padding": {
          "bottom": 75,
          "left": 75,
          "right": 45,
          "top": 45,
        },
        "query": {
          "category": "physical",
        },
        "stringId": "Sockets_physical",
        "stroke": "#06c",
      },
    },
  ],
}
`;

exports[`Product Satellite config should apply graph configuration: settings 1`] = `
{
  "actions": [
    {
      "id": "granularity",
      "position": "right",
    },
  ],
  "isDisabledLegendClick": true,
}
`;

exports[`Product Satellite config should apply guest inventory configuration: filtered 1`] = `
{
  "cells": [
    {
      "title": "lorem",
    },
    {
      "title": "lorem inventory id",
    },
    {
      "title": <DateFormat
        date="2022-01-01T00:00:00.000Z"
      />,
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header, {"context":"guestsDisplayName"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"inventoryId"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"lastSeen"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "displayName": {
      "title": "t(curiosity-inventory.header, {"context":"displayName"})",
      "value": "lorem",
    },
    "inventoryId": {
      "title": "t(curiosity-inventory.header, {"context":"inventoryId"})",
      "value": "lorem inventory id",
    },
    "lastSeen": {
      "title": "t(curiosity-inventory.header, {"context":"lastSeen"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
    "loremIpsum": {
      "title": "t(curiosity-inventory.header, {"context":"loremIpsum"})",
      "value": "hello world",
    },
    "subscriptionManagerId": {
      "title": "t(curiosity-inventory.header, {"context":"subscriptionManagerId"})",
      "value": "lorem subscription id",
    },
  },
}
`;

exports[`Product Satellite config should apply guest inventory configuration: filtered, NOT authorized 1`] = `
{
  "cells": [
    {
      "title": "lorem",
    },
    {
      "title": "lorem inventory id",
    },
    {
      "title": <DateFormat
        date="2022-01-01T00:00:00.000Z"
      />,
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header, {"context":"guestsDisplayName"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"inventoryId"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"lastSeen"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "displayName": {
      "title": "t(curiosity-inventory.header, {"context":"displayName"})",
      "value": "lorem",
    },
    "inventoryId": {
      "title": "t(curiosity-inventory.header, {"context":"inventoryId"})",
      "value": "lorem inventory id",
    },
    "lastSeen": {
      "title": "t(curiosity-inventory.header, {"context":"lastSeen"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
    "loremIpsum": {
      "title": "t(curiosity-inventory.header, {"context":"loremIpsum"})",
      "value": "hello world",
    },
    "subscriptionManagerId": {
      "title": "t(curiosity-inventory.header, {"context":"subscriptionManagerId"})",
      "value": "lorem subscription id",
    },
  },
}
`;

exports[`Product Satellite config should apply guest inventory configuration: filtered, authorized 1`] = `
{
  "cells": [
    {
      "title": <Button
        component="a"
        href="/insights/inventory/lorem inventory id/"
        isInline={true}
        variant="link"
      >
        lorem
      </Button>,
    },
    {
      "title": "lorem inventory id",
    },
    {
      "title": <DateFormat
        date="2022-01-01T00:00:00.000Z"
      />,
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header, {"context":"guestsDisplayName"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"inventoryId"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"lastSeen"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "displayName": {
      "title": "t(curiosity-inventory.header, {"context":"displayName"})",
      "value": "lorem",
    },
    "inventoryId": {
      "title": "t(curiosity-inventory.header, {"context":"inventoryId"})",
      "value": "lorem inventory id",
    },
    "lastSeen": {
      "title": "t(curiosity-inventory.header, {"context":"lastSeen"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
    "loremIpsum": {
      "title": "t(curiosity-inventory.header, {"context":"loremIpsum"})",
      "value": "hello world",
    },
    "subscriptionManagerId": {
      "title": "t(curiosity-inventory.header, {"context":"subscriptionManagerId"})",
      "value": "lorem subscription id",
    },
  },
}
`;

exports[`Product Satellite config should apply guest inventory configuration: filtered, missing inventory id 1`] = `
{
  "cells": [
    {
      "title": "lorem",
    },
    {
      "title": "",
    },
    {
      "title": <DateFormat
        date="2022-01-01T00:00:00.000Z"
      />,
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header, {"context":"guestsDisplayName"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"inventoryId"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"lastSeen"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "displayName": {
      "title": "t(curiosity-inventory.header, {"context":"displayName"})",
      "value": "lorem",
    },
    "inventoryId": {
      "title": "t(curiosity-inventory.header, {"context":"inventoryId"})",
      "value": "",
    },
    "lastSeen": {
      "title": "t(curiosity-inventory.header, {"context":"lastSeen"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
    "loremIpsum": {
      "title": "t(curiosity-inventory.header, {"context":"loremIpsum"})",
      "value": "hello world",
    },
    "subscriptionManagerId": {
      "title": "t(curiosity-inventory.header, {"context":"subscriptionManagerId"})",
      "value": "lorem subscription id",
    },
  },
}
`;

exports[`Product Satellite config should apply toolbar configuration: filters 1`] = `
[
  {
    "id": "sla",
  },
  {
    "id": "usage",
    "selected": true,
  },
  {
    "id": "category",
  },
]
`;
